--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -482,8 +482,10 @@ config GOLDFISH
 config X86_CPU_RESCTRL
 	bool "x86 CPU resource control support"
 	depends on X86 && (CPU_SUP_INTEL || CPU_SUP_AMD)
+	depends on MISC_FILESYSTEMS
 	select KERNFS
-	select PROC_CPU_RESCTRL		if PROC_FS
+	select ARCH_HAS_CPU_RESCTRL
+	select RESCTRL_FS
 	select RESCTRL_FS_PSEUDO_LOCK
 	help
 	  Enable x86 CPU resource control support.
@@ -500,12 +502,6 @@ config X86_CPU_RESCTRL
 	  Platform Quality of Service Extensions manual.
 
 	  Say N if unsure.
-
-config RESCTRL_FS_PSEUDO_LOCK
-	bool
-	help
-	  Software mechanism to try and pin data in a cache portion using
-	  micro-architecture tricks.
 
 if X86_32
 config X86_BIGSMP
